Vanilla Redux DONE :)

--- a/public/index.html
+++ b/public/index.html
@@ -14,6 +14,11 @@
     <title>Redux</title>
   </head>
   <body>
-    <div id="root"></div>
+    <h1>Todo List</h1>
+    <form>
+      <input type="text" placeholder="your todo.." />
+      <button type="submit">Add</button>
+    </form>
+    <ul></ul>
   </body>
 </html>
