React-Redux DONE

--- a/public/index.html
+++ b/public/index.html
@@ -14,11 +14,6 @@
     <title>Redux</title>
   </head>
   <body>
-    <h1>Todo List</h1>
-    <form>
-      <input type="text" placeholder="your todo.." />
-      <button type="submit">Add</button>
-    </form>
-    <ul></ul>
+    <div id="root"></div>
   </body>
 </html>
